--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,25 @@
 /* 追加するCSSスタイル */
-.mb-3 {
-  margin-left: 100px;
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
 }
 
-.container {
-  display: flex;
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
 }
 
-/* 追加するCSSスタイル */
+.table th {
+  background-color: #f2f2f2;
+}
+
+.table td {
+  width: 33.33%;
+  padding: 12px; /* 元の8pxから12pxに変更 */
+}
+
 .mb-3 {
   margin-left: 100px;
 }
@@ -17,7 +29,7 @@
 }
 
 .cur_btns {
-  margin-right: 20px; /* 余白を調整 */
+  margin-right: 20px;
 }
 
 .cur_btns a {
@@ -27,29 +39,30 @@
   text-decoration: none;
   color: #333;
   font-weight: bold;
-  margin-right: 80px; /* 右側の余白 */
-  padding: 10px; /* ボタン内の余白 */
-  border: 1px solid #ccc; /* 枠線 */
-  border-radius: 10px; /* 四角丸 */
+  margin-right: 80px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  width: 100px;
 }
 
 /* 選択された学年にスタイルを適用 */
 .cur_btns a:hover,
 .cur_btns a:focus {
   background-color: #eee;
-  color: #fff; /* テキスト色を白に設定 */
+  color: #fff; 
 }
 
 .cur_btns .cur_primary a {
-  background-color: rgb(0, 213, 255); /* 小学生の背景色（青色） */
+  background-color: rgb(0, 213, 255);
 }
 
 .cur_btns .cur_middle a {
-  background-color: #2ecc9a; /* 中学生の背景色（緑色） */
+  background-color: #2ecc9a;
 }
 
 .cur_btns .cur_high a {
-  background-color: #5be73c; /* 高校生の背景色（赤色） */
+  background-color: #5be73c;
 }
 
 .rtn_btn {
@@ -59,8 +72,8 @@
   text-decoration: none;
   color: #333;
   font-weight: bold;
-  margin-right: 80px; /* 右側の余白 */
-  padding: 10px; /* ボタン内の余白 */
-  border: 1px solid #ccc; /* 枠線 */
-  border-radius: 10px; /* 四角丸 */
+  margin-right: 80px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
