--- a/public/css/password.css
+++ b/public/css/password.css
@@ -34,21 +34,12 @@ a{
     text-decoration: none;
 }
 
-.main{
-    margin:40px;
-
+.alert{
+    
+    background-color:lightpink;
 }
 
-p.date{
-    height:5px;
-    font-size:20px;
-}
-
-p.title{
-    font-size:30px;
-}
-
-p.contents{
-    height:100px;
-    font-size:20px;
+.alert1{
+    
+    background-color:aqua;
 }
